[package]
name = "osunbitdb"
version = "0.2.0"
edition = "2021"
authors = ["focusboon"]
description = "A lightweight super fast transaction async db"
license = "MIT OR Apache-2.0"
repository = "https://github.com/osunbit/osunbitdb"
keywords = ["osunbit", "database", "async","tikv","rocksdb", "rust", "document"]
categories = ["database"]
readme = "README.md"

[dependencies]
tikv-client = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
tokio = { version = "1.30", features = ["full"] }
thiserror = "1.0"
